Updating Old File for core commit

--- a/help/release-notes/2020/july-2020.md
+++ b/help/release-notes/2020/july-2020.md
@@ -7,8 +7,8 @@ author: crhoades, ens25212
 translation-type: tm+mt
 source-git-commit: c64d4cc01b5125fad5f7c75914dfc1e4b20bc069
 workflow-type: tm+mt
-source-wordcount: '683'
-ht-degree: 30%
+source-wordcount: '671'
+ht-degree: 32%
 
 ---
 
@@ -19,10 +19,10 @@ ht-degree: 30%
 
 Aktualisierungen vorhandener Funktionen in Adobe Experience Platform:
 
-- [[!DNL -Datenverwaltung]](#governance)
-- [[!DNL Echtzeit-Profil des Kunden]](#profile)
-- [[!DNL -Segmentierungsdienst]](#segmentation)
-- [[!DNL -Quellen]](#sources)
+- [[!DNL Data Governance]](#governance)
+- [[!DNL Real-time Customer Profile]](#profile)
+- [[!DNL Segmentation Service]](#segmentation)
+- [[!DNL Sources]](#sources)
 
 ## [!DNL Data Governance] {#governance}
 
@@ -32,15 +32,15 @@ Adobe Experience Platform Data Governance besteht aus einer Reihe von Strategien
 
 | Funktion | Beschreibung |
 | -----------| ---------- |
-| Automatische Durchsetzung der Richtlinie in [!DNL Real-time Customer Data Platform] | Data usage policies are now automatically enforced in [!DNL Real-time CDP] when violating actions occur, including activating segments to destinations. Wenn eine Richtlinienverletzung ausgelöst wird, erhalten Benutzer eine Echtzeit-Übersicht über Nutzungsbeschränkungen im Arbeitsablauf für die Aktivierung, wobei angegeben wird, welche Daten sie nicht verwenden können und warum.<br><br>See the section on [enforcing data usage compliance](../../rtcdp/privacy/data-governance-overview.md#enforce-data-usage-compliance) within the overview on [!DNL Data Governance] in [!DNL Real-time CDP] for more information. |
-| Adobe Audience Manager-Integration | Any segments that are shared with [!DNL Audience Manager] from [!DNL Platform] inherit any applied data usage labels as [!DNL Data Export Controls], and vice versa. In der [!DNL Audience Manager] Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportkontrollen](https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html#aam-data-export-control-in-aep). |
-| Custom data usage labels | Sie können jetzt benutzerdefinierte Datenverwendungsbeschriftungen mit der Policy Service API oder in der Benutzeroberfläche erstellen. See the [labels overview](../../data-governance/labels/overview.md) for more information. |
+| Automatische Durchsetzung der Richtlinie in [!DNL Real-time Customer Data Platform] | Datenverwendungsrichtlinien werden jetzt automatisch erzwungen, [!DNL Real-time CDP] wenn Verstöße auftreten, einschließlich der Aktivierung von Segmenten an Ziele. Wenn eine Richtlinienverletzung ausgelöst wird, erhalten Benutzer eine Echtzeit-Übersicht über Nutzungsbeschränkungen im Arbeitsablauf für die Aktivierung, wobei angegeben wird, welche Daten sie nicht verwenden können und warum.<br><br>Weitere Informationen finden Sie im Abschnitt zur [Erzwingung der Datenverwendungskonformität](../../rtcdp/privacy/data-governance-overview.md#enforce-data-usage-compliance) in der Übersicht [!DNL Data Governance] unter [!DNL Real-time CDP] . |
+| Adobe Audience Manager-Integration | Alle Segmente, für die [!DNL Audience Manager] von [!DNL Platform] geteilt wird, übernehmen alle angewendeten Datenverwendungsbeschriftungen als [!DNL Data Export Controls]und umgekehrt. In der [!DNL Audience Manager] Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportkontrollen](https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html#aam-data-export-control-in-aep). |
+| Benutzerdefinierte Datenverwendungsbeschriftungen | Sie können jetzt benutzerdefinierte Datenverwendungsbeschriftungen mit der Policy Service API oder in der Benutzeroberfläche erstellen. See the [labels overview](../../data-governance/labels/overview.md) for more information. |
 
 Weitere Informationen zum Dienst finden Sie in der Übersicht über die [Datenverwaltung](../../data-governance/home.md) .
 
 ## [!DNL Real-time Customer Profile] {#profile}
 
-Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. With [!DNL Real-time Customer Profile], you can see a holistic view of each individual customer that combines data from multiple channels, including online, offline, CRM, and third party data. [!DNL Profile] allows you to consolidate your disparate customer data into a unified view offering an actionable, timestamped account of every customer interaction.
+Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. With [!DNL Real-time Customer Profile], you can see a holistic view of each individual customer that combines data from multiple channels, including online, offline, CRM, and third party data. [!DNL Profile] ermöglicht es Ihnen, Ihre unterschiedlichen Kundendaten zu einer einheitlichen Ansicht zusammenzuführen, die Ihnen einen umsetzbaren Zeitstempel für jede Kundeninteraktion bietet.
 
 **Neue Funktionen**
 
@@ -73,7 +73,7 @@ Adobe Experience Platform can ingest data from external sources while allowing y
 
 | Funktion | Beschreibung |
 | ------- | ----------- |
-| Benutzeroberflächenunterstützung beim Löschen von Datenflüssen | Dataflows that were made with errors or have become unnecessary can now be deleted through the UI. |
-| API- und UI-Unterstützung für einmalige Erfassung | One-time ingestion for dataflows, where only the start date is provided and no future ingestion is scheduled, can now be executed through APIs or using the UI. |
+| Benutzeroberflächenunterstützung beim Löschen von Datenflüssen | Datenflüsse, die mit Fehlern gemacht wurden oder unnötig geworden sind, können jetzt über die Benutzeroberfläche gelöscht werden. |
+| API- und UI-Unterstützung für einmalige Erfassung | Eine einmalige Erfassung für Datenflüsse, bei der nur das Datum des Beginns angegeben und keine weitere Erfassung geplant ist, kann jetzt über APIs oder über die Benutzeroberfläche ausgeführt werden. |
 
 Weitere Informationen zu Quellen finden Sie in der [Quellen – Übersicht](../../sources/home.md).
