Updating Old File for core commit

--- a/help/release-notes/2019/july-2019.md
+++ b/help/release-notes/2019/july-2019.md
@@ -7,7 +7,7 @@ author: ens28527
 translation-type: tm+mt
 source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
 workflow-type: tm+mt
-source-wordcount: '811'
+source-wordcount: '800'
 ht-degree: 20%
 
 ---
@@ -19,12 +19,12 @@ ht-degree: 20%
 
 Neue Funktionen in Adobe Experience Platform:
 
-* [[!DNL-Privacy Service]](#privacy)
+* [[!DNL Privacy Service]](#privacy)
 
 Aktualisierungen vorhandener Funktionen:
 
 * [[!DNL Experience Data Model (XDM)]](#xdm)
-* [[!DNL-Segmentierungsdienst]](#segmentation)
+* [[!DNL Segmentation Service]](#segmentation)
 
 ## [!DNL Privacy Service] {#privacy}
 
@@ -38,7 +38,7 @@ Adobe Experience Platform [!DNL Privacy Service] stellt eine RESTful-API und ein
 |---|---|
 | [!DNL Privacy Service] Benutzeroberfläche (Benutzeroberfläche) | Das neue Dashboard für die GDPR-Anforderungsmetriken bietet Einblick in gesendete GDPR-Anforderungen, einschließlich ob diese abgeschlossen wurden oder ein Fehler zurückgegeben wurde. |
 | Anforderungs-Builder erstellen | Um Unternehmen mit nicht-technischen und technischen Benutzern, die GDPR-Anforderungen einreichen, zu unterstützen, wurde der Benutzeroberfläche die Funktion &quot;Anforderung erstellen&quot;hinzugefügt. The JSON file submission capability is still available in the [!DNL Privacy Service] UI for those organizations who prefer to continue using it. |
-| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe-E/A-Ereignis nutzen und an einen konfigurierten Webhop gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Users of the [!DNL Privacy Service] UI can subscribe to Adobe I/O GDPR events to receive updates when a product or the GDPR job has been completed. |
+| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe I/O-Ereignis nutzen, die an einen konfigurierten Web-Haken gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Users of the [!DNL Privacy Service] UI can subscribe to Adobe I/O GDPR events to receive updates when a product or the GDPR job has been completed. |
 
 **Fehlerkorrekturen**
 
@@ -79,7 +79,7 @@ Die [!DNL Experience Platform] zugrunde liegende Methodik [!DNL XDM System] setz
 
 To learn more about working with XDM using the [!DNL Schema Registry] API and [!DNL Schema Editor], please read the [XDM System documentation](../../xdm/home.md).
 
-## Segmentation Service {#segmentation}
+## Segmentierungs-Service {#segmentation}
 
 Mit Adobe Experience Platform [!DNL Segmentation Service] können Sie Regeln erstellen, die die Attribute und Verhaltensweisen einer vermarktbaren Personengruppe beschreiben, und anschließend mithilfe von Profilen in Ihrem Profil-Store umsetzbare Audiencen erstellen, die auf diesen Regeln basieren.
 
