Updating Old File for core commit

--- a/help/release-notes/2020/june-2020.md
+++ b/help/release-notes/2020/june-2020.md
@@ -7,8 +7,8 @@ author: crhoades, ens28527
 translation-type: tm+mt
 source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
 workflow-type: tm+mt
-source-wordcount: '393'
-ht-degree: 38%
+source-wordcount: '385'
+ht-degree: 41%
 
 ---
 
@@ -20,8 +20,8 @@ ht-degree: 38%
 Aktualisierungen vorhandener Funktionen in Adobe Experience Platform:
 
 - [[!DNL Data Science Workspace]](#dsw)
-- [[!DNL-Segmentierung]](#segmentation)
-- [[!DNL-Quellen]](#sources)
+- [[!DNL Segmentation]](#segmentation)
+- [[!DNL Sources]](#sources)
 
 ## [!DNL Data Science Workspace] {#dsw}
 
