Updating Old File for core commit

--- a/help/release-notes/2019/may-2019.md
+++ b/help/release-notes/2019/may-2019.md
@@ -7,7 +7,7 @@ author: crhoades
 translation-type: tm+mt
 source-git-commit: 0f3a4ba6ad96d2226ae5094fa8b5073152df90f7
 workflow-type: tm+mt
-source-wordcount: '1809'
+source-wordcount: '1785'
 ht-degree: 61%
 
 ---
@@ -20,12 +20,12 @@ ht-degree: 61%
 Neue Funktionen in Adobe Experience Platform:
 
 * [[!DNL Data Ingestion]](#ingestion)
-* [[!DNL-Data Management]](#management)
+* [[!DNL Data Management]](#management)
 * [[!DNL Experience Data Model (XDM)]](#xdm)
-* [[!DNL Echtzeit-Profil des Kunden]](#profile)
-* [[!DNL-Identitätsdienst]](#identity)
-* [[!DNL-Segmentierungsdienst]](#segmentation)
-* [[!DNL-Datenverwaltung]](#governance)
+* [[!DNL Real-time Customer Profile]](#profile)
+* [[!DNL Identity Service]](#identity)
+* [[!DNL Segmentation Service]](#segmentation)
+* [[!DNL Data Governance]](#governance)
 
 ## [!DNL Data Ingestion] {#ingestion}
 
