Updating Old File for core commit a8933002bc20822d446be7693592a4c2b3be8cb1

--- a/help/release-notes/2020/july-2020.md
+++ b/help/release-notes/2020/july-2020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: July 15, 2020
 author: crhoades, ens25212
 translation-type: tm+mt
-source-git-commit: c64d4cc01b5125fad5f7c75914dfc1e4b20bc069
+source-git-commit: e680191d495e4c33baa8242d40a15b9124eec8cd
 workflow-type: tm+mt
-source-wordcount: '671'
+source-wordcount: '655'
 ht-degree: 32%
 
 ---
@@ -26,31 +26,31 @@ Aktualisierungen vorhandener Funktionen in Adobe Experience Platform:
 
 ## [!DNL Data Governance] {#governance}
 
-Adobe Experience Platform Data Governance besteht aus einer Reihe von Strategien und Technologien zur Verwaltung von Kundendaten sowie zur Gewährleistung der Einhaltung von Vorschriften, Beschränkungen und Datennutzungsrichtlinien. It plays a key role within [!DNL Experience Platform] at various levels, including cataloging, data lineage, data usage labeling, data access policies, and access control on data for marketing actions.
+Adobe Experience Platform Data Governance besteht aus einer Reihe von Strategien und Technologien zur Verwaltung von Kundendaten sowie zur Gewährleistung der Einhaltung von Vorschriften, Beschränkungen und Datennutzungsrichtlinien. Es spielt eine Schlüsselrolle innerhalb von [!DNL Experience Platform] auf verschiedenen Ebenen, einschließlich Katalogisierung, Datenbindung, Datenbeschriftung, Datenzugriffsrichtlinien und Zugriffskontrolle von Daten für Marketingaktionen.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 | -----------| ---------- |
-| Automatische Durchsetzung der Richtlinie in [!DNL Real-time Customer Data Platform] | Datenverwendungsrichtlinien werden jetzt automatisch erzwungen, [!DNL Real-time CDP] wenn Verstöße auftreten, einschließlich der Aktivierung von Segmenten an Ziele. Wenn eine Richtlinienverletzung ausgelöst wird, erhalten Benutzer eine Echtzeit-Übersicht über Nutzungsbeschränkungen im Arbeitsablauf für die Aktivierung, wobei angegeben wird, welche Daten sie nicht verwenden können und warum.<br><br>Weitere Informationen finden Sie im Abschnitt zur [Erzwingung der Datenverwendungskonformität](../../rtcdp/privacy/data-governance-overview.md#enforce-data-usage-compliance) in der Übersicht [!DNL Data Governance] unter [!DNL Real-time CDP] . |
-| Adobe Audience Manager-Integration | Alle Segmente, für die [!DNL Audience Manager] von [!DNL Platform] geteilt wird, übernehmen alle angewendeten Datenverwendungsbeschriftungen als [!DNL Data Export Controls]und umgekehrt. In der [!DNL Audience Manager] Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportkontrollen](https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html#aam-data-export-control-in-aep). |
-| Benutzerdefinierte Datenverwendungsbeschriftungen | Sie können jetzt benutzerdefinierte Datenverwendungsbeschriftungen mit der Policy Service API oder in der Benutzeroberfläche erstellen. See the [labels overview](../../data-governance/labels/overview.md) for more information. |
+| Automatische Richtliniendurchsetzung in [!DNL Real-time Customer Data Platform] | Datenverwendungsrichtlinien werden jetzt automatisch in [!DNL Real-time CDP] erzwungen, wenn Verstöße auftreten, einschließlich der Aktivierung von Segmenten zu Zielen. Wenn eine Richtlinienverletzung ausgelöst wird, erhalten Benutzer eine Echtzeit-Übersicht über Nutzungsbeschränkungen im Arbeitsablauf für die Aktivierung, wobei angegeben wird, welche Daten sie nicht verwenden können und warum. |
+| Adobe Audience Manager-Integration | Alle Segmente, die mit [!DNL Audience Manager] von [!DNL Platform] freigegeben werden, übernehmen alle angewendeten Datenverwendungsbeschriftungen als [!DNL Data Export Controls] und umgekehrt. In der [!DNL Audience Manager]-Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportsteuerelementen](https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html#aam-data-export-control-in-aep). |
+| Benutzerdefinierte Datenverwendungsbeschriftungen | Sie können jetzt benutzerdefinierte Datenverwendungsbeschriftungen mit der Policy Service API oder in der Benutzeroberfläche erstellen. Weitere Informationen finden Sie unter [Übersichtlichkeit der Beschriftungen](../../data-governance/labels/overview.md). |
 
-Weitere Informationen zum Dienst finden Sie in der Übersicht über die [Datenverwaltung](../../data-governance/home.md) .
+Weitere Informationen zum Dienst finden Sie unter [Übersicht über die Datenverwaltung](../../data-governance/home.md).
 
 ## [!DNL Real-time Customer Profile] {#profile}
 
-Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. With [!DNL Real-time Customer Profile], you can see a holistic view of each individual customer that combines data from multiple channels, including online, offline, CRM, and third party data. [!DNL Profile] ermöglicht es Ihnen, Ihre unterschiedlichen Kundendaten zu einer einheitlichen Ansicht zusammenzuführen, die Ihnen einen umsetzbaren Zeitstempel für jede Kundeninteraktion bietet.
+Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. Mit [!DNL Real-time Customer Profile] können Sie eine ganzheitliche Ansicht jedes einzelnen Kunden sehen, die Daten aus mehreren Kanälen, einschließlich Online-, Offline-, CRM- und Drittanbieterdaten, kombiniert. [!DNL Profile] ermöglicht es Ihnen, Ihre unterschiedlichen Kundendaten zu einer einheitlichen Ansicht zusammenzuführen, die Ihnen einen umsetzbaren Zeitstempel für jede Kundeninteraktion bietet.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 | ------- | ----------- |
-| Durchsetzung von Datenverwendungsrichtlinien | In [!DNL Real-time Customer Data Platform]diesem Fall werden Verstöße gegen die Richtlinie zur Datenverwendung automatisch aufgedeckt, wenn eine Verletzung im Arbeitsbereich [!UICONTROL Profil] versucht wird. Weitere Informationen zur automatischen Durchsetzung von Richtlinien finden Sie in den [Versionshinweisen zur Datenverwaltung](#governance) . |
+| Durchsetzung von Datenverwendungsrichtlinien | In [!DNL Real-time Customer Data Platform] werden Verstöße gegen die Datenverwendungsrichtlinie automatisch aufgedeckt, wenn eine Verletzung im Arbeitsbereich [!UICONTROL Profil] versucht wird. Weitere Informationen zur automatischen Richtliniendurchsetzung finden Sie in den [Versionshinweisen für Datenverwaltung](#governance). |
 
 ## [!DNL Segmentation Service] {#segmentation}
 
-Adobe Experience Platform Segmentation Service provides a user interface and RESTful API that allows you to build segments and generate audiences from your [!DNL Real-time Customer Profile] data. These segments are centrally configured and maintained on [!DNL Platform], making them readily accessible by any Adobe application.
+Der Adobe Experience Platform Segmentation Service bietet eine Benutzeroberfläche und RESTful-API, mit der Sie Segmente erstellen und Audiencen aus Ihren [!DNL Real-time Customer Profile]-Daten generieren können. Diese Adoben werden zentral auf [!DNL Platform] konfiguriert und gepflegt, sodass sie für jede Anwendung leicht zugänglich sind.
 
 [!DNL Segmentation Service] definiert eine bestimmte Untergruppe von Profilen, indem das Kriterium beschrieben wird, das eine vermarktbare Personengruppe innerhalb Ihres Kundenstamms unterscheidet. Segmente können auf Datensatzdaten (z. B. demografische Daten) oder Zeitreihenereignissen basieren, die Kundeninteraktionen mit Ihrer Marke darstellen.
 
@@ -58,14 +58,14 @@ Adobe Experience Platform Segmentation Service provides a user interface and RES
 
 | Funktion | Beschreibung |
 | ------- | ----------- |
-| Streaming-Segmentierung | Streaming-Segmentierung kann jetzt als Benutzer in ein Segment eingeordnet werden, wenn Daten eingehen, [!DNL Platform]wodurch die Segmentqualifizierungszeit erheblich verkürzt wird. Durch Streaming-Segmentierung wird auch die manuelle Ausführung von Segmentierungsaufträgen erleichtert. |
-| Durchsetzung von Datenverwendungsrichtlinien | In [!DNL Real-time Customer Data Platform]diesem Fall werden Verstöße gegen die Richtlinie zur Datenverwendung automatisch aufgedeckt, wenn eine Verletzung im Arbeitsbereich &quot; [!UICONTROL Segmente] &quot;versucht wird. Weitere Informationen zur automatischen Durchsetzung von Richtlinien finden Sie in den [Versionshinweisen zur Datenverwaltung](#governance) . |
+| Streaming-Segmentierung | Streaming-Segmentierung kann jetzt als Benutzer in ein Segment eingeordnet werden, wenn Daten in [!DNL Platform] eingehen, wodurch sich die Segmentqualifizierungszeit erheblich verringert. Durch Streaming-Segmentierung wird auch die manuelle Ausführung von Segmentierungsaufträgen erleichtert. |
+| Durchsetzung von Datenverwendungsrichtlinien | In [!DNL Real-time Customer Data Platform] werden Verstöße gegen die Datenverwendungsrichtlinie automatisch aufgedeckt, wenn eine verletzende Aktion im Arbeitsbereich [!UICONTROL Segmente] versucht wird. Weitere Informationen zur automatischen Richtliniendurchsetzung finden Sie in den [Versionshinweisen für Datenverwaltung](#governance). |
 
-For more information on [!DNL Segmentation Service], please see the [Segmentation overview](../../segmentation/home.md)
+Weitere Informationen zu [!DNL Segmentation Service] finden Sie in der [Segmentierungsübersicht](../../segmentation/home.md)
 
 ## Quellen {#sources}
 
-Adobe Experience Platform can ingest data from external sources while allowing you to structure, label, and enhance that data using [!DNL Platform] services. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
+Adobe Experience Platform kann Daten aus externen Quellen erfassen, während Sie diese Daten mithilfe der [!DNL Platform]-Dienste strukturieren, beschriften und erweitern können. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
 
 [!DNL Experience Platform]Im Rahmen von stehen eine RESTful-API und interaktive Benutzeroberfläche zur Verfügung, mit deren Hilfe Sie auf unkomplizierte Weise Verbindungen zu Datenquellen verschiedener Anbieter einrichten können. Mit diesen Quellverbindungen können Sie sich authentifizieren und eine Verbindung zu externen Datenspeichern und CRM-Diensten herstellen, Zeiten für Erfassungsläufe festlegen und den Durchsatz der Datenerfassung verwalten.
 
