Updating Old File for core commit cbc5377f1ac93c8917aadb54fd5e5ec19bc02120

--- a/help/release-notes/2020/july-2020.md
+++ b/help/release-notes/2020/july-2020.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: July 15, 2020
 author: crhoades, ens25212
 translation-type: tm+mt
-source-git-commit: e680191d495e4c33baa8242d40a15b9124eec8cd
+source-git-commit: 2dbd92efbd992b70f4f750b09e9d2e0626e71315
 workflow-type: tm+mt
-source-wordcount: '655'
-ht-degree: 32%
+source-wordcount: '652'
+ht-degree: 33%
 
 ---
 
@@ -33,7 +33,7 @@ Adobe Experience Platform Data Governance besteht aus einer Reihe von Strategien
 | Funktion | Beschreibung |
 | -----------| ---------- |
 | Automatische Richtliniendurchsetzung in [!DNL Real-time Customer Data Platform] | Datenverwendungsrichtlinien werden jetzt automatisch in [!DNL Real-time CDP] erzwungen, wenn Verstöße auftreten, einschließlich der Aktivierung von Segmenten zu Zielen. Wenn eine Richtlinienverletzung ausgelöst wird, erhalten Benutzer eine Echtzeit-Übersicht über Nutzungsbeschränkungen im Arbeitsablauf für die Aktivierung, wobei angegeben wird, welche Daten sie nicht verwenden können und warum. |
-| Adobe Audience Manager-Integration | Alle Segmente, die mit [!DNL Audience Manager] von [!DNL Platform] freigegeben werden, übernehmen alle angewendeten Datenverwendungsbeschriftungen als [!DNL Data Export Controls] und umgekehrt. In der [!DNL Audience Manager]-Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportsteuerelementen](https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html#aam-data-export-control-in-aep). |
+| Adobe Audience Manager-Integration | Alle Segmente, die mit [!DNL Audience Manager] von [!DNL Platform] freigegeben werden, übernehmen alle angewendeten Datenverwendungsbeschriftungen als [!DNL Data Export Controls] und umgekehrt. In der [!DNL Audience Manager]-Dokumentation finden Sie spezifische [Zuordnungen zwischen Gebrauchsbeschriftungen und Datenexportsteuerelementen](https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html). |
 | Benutzerdefinierte Datenverwendungsbeschriftungen | Sie können jetzt benutzerdefinierte Datenverwendungsbeschriftungen mit der Policy Service API oder in der Benutzeroberfläche erstellen. Weitere Informationen finden Sie unter [Übersichtlichkeit der Beschriftungen](../../data-governance/labels/overview.md). |
 
 Weitere Informationen zum Dienst finden Sie unter [Übersicht über die Datenverwaltung](../../data-governance/home.md).
