--- a/help/release-notes/2019/july-2019.md
+++ b/help/release-notes/2019/july-2019.md
@@ -5,7 +5,7 @@ doc-type: release notes
 last-update: July 31, 2019
 author: ens28527
 translation-type: tm+mt
-source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
+source-git-commit: 00010d38a5d05800aeac9af8505093fee3593b45
 workflow-type: tm+mt
 source-wordcount: '800'
 ht-degree: 20%
@@ -28,48 +28,48 @@ Aktualisierungen vorhandener Funktionen:
 
 ## [!DNL Privacy Service] {#privacy}
 
-Adobe Experience Platform [!DNL Privacy Service] stellt eine RESTful-API und eine Benutzeroberfläche bereit, die Firmen bei der Verwaltung von Kundendatenanforderungen unterstützen. Mit [!DNL Privacy Service]dieser Funktion können Sie Anfragen zum Zugriff auf und zur Löschung von Daten von Privatkunden oder Privatpersonen stellen, was die automatische Einhaltung von Vorschriften zum Schutz der Privatsphäre in Unternehmen und Rechtsordnungen wie der in der Europäischen Vereinigung eingeführten Datenschutzverordnung (GDPR) erleichtert.
+Adobe Experience Platform [!DNL Privacy Service] stellt eine RESTful-API und eine Benutzeroberfläche bereit, die Firmen bei der Verwaltung von Kundendatenanforderungen unterstützen. Mit [!DNL Privacy Service] können Sie Anfragen zum Zugriff auf und Löschen von persönlichen oder privaten Kundendaten stellen, wodurch die automatische Einhaltung von Organisations- und Rechtsschutzvorschriften wie der in der Europäischen Vereinigung eingeführten Datenschutzverordnung (GDPR) erleichtert wird.
 
-[!DNL Privacy Service] wurde als Reaktion auf eine grundlegende Änderung der Art und Weise entwickelt, wie Unternehmen die personenbezogenen Daten ihrer Kunden verwalten müssen. Das zentrale Ziel von [!DNL Privacy Service] ist es, die Einhaltung der Datenschutzbestimmungen zu automatisieren, die bei Verstößen zu hohen Geldbußen und zu Störungen des Datenbetriebs für Ihr Unternehmen führen können.
+[!DNL Privacy Service] wurde als Reaktion auf eine grundlegende Änderung der Art und Weise entwickelt, wie Unternehmen die personenbezogenen Daten ihrer Kunden verwalten müssen. Der zentrale Zweck von [!DNL Privacy Service] ist die Automatisierung der Einhaltung von Datenschutzbestimmungen, die bei Verstößen zu erheblichen Geldbußen und Störungen des Datenbetriebs für Ihr Unternehmen führen können.
 
 **Wichtigste Funktionen**
 
 | Funktion | Beschreibung |
 |---|---|
 | [!DNL Privacy Service] Benutzeroberfläche (Benutzeroberfläche) | Das neue Dashboard für die GDPR-Anforderungsmetriken bietet Einblick in gesendete GDPR-Anforderungen, einschließlich ob diese abgeschlossen wurden oder ein Fehler zurückgegeben wurde. |
-| Anforderungs-Builder erstellen | Um Unternehmen mit nicht-technischen und technischen Benutzern, die GDPR-Anforderungen einreichen, zu unterstützen, wurde der Benutzeroberfläche die Funktion &quot;Anforderung erstellen&quot;hinzugefügt. The JSON file submission capability is still available in the [!DNL Privacy Service] UI for those organizations who prefer to continue using it. |
-| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe I/O-Ereignis nutzen, die an einen konfigurierten Web-Haken gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Users of the [!DNL Privacy Service] UI can subscribe to Adobe I/O GDPR events to receive updates when a product or the GDPR job has been completed. |
+| Anforderungs-Builder erstellen | Um Unternehmen mit nicht-technischen und technischen Benutzern, die GDPR-Anforderungen einreichen, zu unterstützen, wurde der Benutzeroberfläche die Funktion &quot;Anforderung erstellen&quot;hinzugefügt. Die JSON-Dateisendefunktion ist in der [!DNL Privacy Service]-Benutzeroberfläche weiterhin für diejenigen Organisationen verfügbar, die sie weiterhin verwenden möchten. |
+| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe I/O-Ereignis nutzen, die an einen konfigurierten Web-Haken gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Benutzer der Benutzeroberfläche [!DNL Privacy Service] können Adobe I/O GDPR-Ereignis abonnieren, um Updates zu erhalten, wenn ein Produkt oder der GDPR-Auftrag abgeschlossen wurde. |
 
 **Fehlerkorrekturen**
 
 * Keine.
 
-For more information, visit the [Privacy Service overview](../../privacy-service/home.md).
+Weitere Informationen finden Sie unter [Übersicht über Privacy Service](../../privacy-service/home.md).
 
 ## [!DNL Experience Data Model] (XDM) {#xdm}
 
-Standardization and interoperability are key concepts behind [!DNL Experience Platform]. [!DNL Experience Data Model] (XDM), angetrieben von der Adobe, ist ein Versuch, Kundenerlebnisdaten zu standardisieren und Schema für das Kundenerlebnis-Management zu definieren.
+Normung und Interoperabilität sind Schlüsselkonzepte hinter [!DNL Experience Platform]. [!DNL Experience Data Model] (XDM), angetrieben von der Adobe, ist ein Versuch, Kundenerlebnisdaten zu standardisieren und Schema für das Kundenerlebnis-Management zu definieren.
 
 XDM ist eine öffentlich dokumentierte Spezifikation, die die Leistungsfähigkeit digitaler Erlebnisse verbessern soll. Es stellt allgemeine Strukturen und Definitionen für Anwendungen bereit, die mit Diensten in Adobe Experience Platform kommunizieren. Durch die Einhaltung von XDM-Standards können alle Kundenerlebnisdaten in eine gemeinsame Darstellung integriert werden, die Erkenntnisse schneller und besser integriert liefert. Sie können wertvolle Einblicke aus Kundenaktionen gewinnen, Zielgruppen durch Segmente definieren und Kundenattribute für Personalisierungszwecke verwenden.
 
-XDM is the mechanism that allows [!DNL Experience Cloud], powered by Adobe Experience Platform, to deliver the right message to the right person, on the right channel, at exactly the right moment.
+XDM ist der Mechanismus, der es [!DNL Experience Cloud], powered by Adobe Experience Platform, erlaubt, die richtige Nachricht an die richtige Person, auf dem richtigen Kanal, genau im richtigen Moment.
 
-Die [!DNL Experience Platform] zugrunde liegende Methodik [!DNL XDM System] setzt [!DNL Experience Data Model] Schema für die Verwendung durch [!DNL Experience Platform] Bauteile in Betrieb.
+Die Methodik, auf der [!DNL Experience Platform] erstellt wird, [!DNL XDM System] operalisiert [!DNL Experience Data Model]-Schema zur Verwendung durch [!DNL Experience Platform]-Komponenten.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 |---|---|
-| Verbessertes Symbolsystem | Die [!DNL Schema Editor] Benutzeroberfläche verfügt über aktualisierte Symbole, die besser mit dem allgemeinen [!DNL Platform] Design übereinstimmen. |
-| Unterstützung für JSON-Schema-Eigenschaften und -Einschränkungen für Skalare | Die [!DNL Schema Editor] Benutzeroberfläche bietet jetzt optionale Felder zum Definieren von [JSON-Schema-Entwurfsbeschränkungen 6](https://tools.ietf.org/html/draft-wright-json-schema-01) für skalare Felder, z. B. `default` und `required`. |
-| Unterstützung von JSON-Schema-Eigenschaften und -Einschränkungen für Arrays | Die [!DNL Schema Editor] Benutzeroberfläche bietet jetzt optionale Felder zum Definieren von [JSON-Schema-Entwurfsbeschränkungen 6](https://tools.ietf.org/html/draft-wright-json-schema-01) für Array-Felder wie `minItems`, `maxItems`und `uniqueItems`. |
+| Verbessertes Symbolsystem | Die [!DNL Schema Editor]-Benutzeroberfläche verfügt über aktualisierte Symbole, die besser mit dem allgemeinen [!DNL Platform]-Design übereinstimmen. |
+| Unterstützung für JSON-Schema-Eigenschaften und -Einschränkungen für Skalare | Die [!DNL Schema Editor]-Benutzeroberfläche bietet jetzt optionale Felder zum Definieren von Einschränkungen für skalare Schemas wie [JSON draft-6](https://tools.ietf.org/html/draft-wright-json-schema-01), z. B. `default` und `required`. |
+| Unterstützung von JSON-Schema-Eigenschaften und -Einschränkungen für Arrays | Die [!DNL Schema Editor]-Benutzeroberfläche bietet jetzt optionale Felder zum Definieren von Einschränkungen für Array-Felder wie [JSON-Schema draft-6](https://tools.ietf.org/html/draft-wright-json-schema-01), `minItems`, `maxItems` und `uniqueItems`. |
 
 **Fehlerkorrekturen**
 
 * Beim Erweitern von Adobe-Mixins durch Hinzufügen eines Felds wird das Mixin jetzt implizit in der Benutzeroberfläche erweitert.
 * Deskriptoren werden jetzt gelöscht, wenn eine Mischung aus der Schema-Komposition entfernt wird.
-* Überladene `meta:intendedToExtend` Werte in Mixins werden jetzt beim Speichern in der Benutzeroberfläche berücksichtigt.
-* Es wurde ein Fehler behoben, durch den die API URLs mit plus (`+`) kodierten Leerzeichen nicht ordnungsgemäß verarbeiten konnte.
+* Überladene `meta:intendedToExtend`-Werte in Mixins werden jetzt beim Speichern in der Benutzeroberfläche berücksichtigt.
+* Es wurde ein Fehler behoben, durch den die API URLs mit Plus- (`+`)-kodierten Leerzeichen nicht ordnungsgemäß verarbeiten konnte.
 * Die Fehlermeldung wurde verbessert, wenn keine Version in API-Aufrufen bereitgestellt wird.
 
 **Bekannte Probleme**
@@ -77,7 +77,7 @@ Die [!DNL Experience Platform] zugrunde liegende Methodik [!DNL XDM System] setz
 * Es kann kein Enum-Feld ohne Beschriftungen erstellt werden.
 * JSON, das von der Schaltfläche &quot;JSON kopieren&quot;in der Benutzeroberfläche erfasst wird, enthält Fremdmetaeigenschaften.
 
-To learn more about working with XDM using the [!DNL Schema Registry] API and [!DNL Schema Editor], please read the [XDM System documentation](../../xdm/home.md).
+Weitere Informationen zum Arbeiten mit XDM mit der [!DNL Schema Registry]-API und [!DNL Schema Editor] finden Sie in der [XDM-Systemdokumentation](../../xdm/home.md).
 
 ## Segmentierungs-Service {#segmentation}
 
@@ -94,7 +94,7 @@ Mit Adobe Experience Platform [!DNL Segmentation Service] können Sie Regeln ers
 **Fehlerkorrekturen**
 
 * Es wurde ein zeitweilig auftretender Fehler behoben, der Fehler verursachte, wenn &quot;nur ausgefüllte Felder anzeigen&quot;deaktiviert wurde.
-* Es wurde ein Fehler behoben, bei dem Attributzusammenfassungen beim Bewegen des Mauszeigers angezeigt wurden - nun beim Klicken auftauchten.
+* Es wurde ein Fehler behoben, bei dem Attributzusammenfassungen beim Bewegen des Mauszeigers angezeigt wurden und nun bei Auswahl auftauchen.
 * Ein Paginierungsfehler bei der Segmentsuche wurde behoben.
 * Kleinere Verbesserungen der Benutzerfreundlichkeit.
 
